# misis2023f-22-24-voevodin-e-o

./: .gitignore  CMakeLists.txt  CMakeSettings.json  codeforces.id  status.md
docs/.obsidian/: workspace.json
prj.codeforces/: 0004c.cpp  0058a.cpp  0110a.cpp  0118a.cpp  0236a.cpp  0282a.cpp  0455a.cpp  0469a.cpp  CMakeLists.txt  object_pool_test.cpp  test.cpp
prj.cw/: CMakeLists.txt  Doxyfile  README.md
prj.cw/include/: bruh.hpp
prj.cw/src/: main.cpp
prj.cw/src/loader/: CMakeLists.txt  loader.cpp  loader.hpp
prj.cw/src/loader/Options/: CMakeLists.txt  Options.hpp
prj.cw/src/loader/Utilities/: CMakeLists.txt  Utilities.hpp
prj.cw/tests/: CMakeLists.txt  main_test.cpp  program_test.cpp
prj.cw/tests/local_tests/: CMakeLists.txt
test_sources/local_tests/: local_test.cpp
